css/style.css
/* This block sets the global properties of the entire page and enabling smooth scrolling */

html {
  scroll-behavior: smooth;
}

body {
  min-height: 100vh;
  margin: 0;
  display: flex;
  flex-direction: column;
  padding-top: 70px;
  font-family: Arial, sans-serif;
  font-size: 16px;
  color: white;
  background: url("../images/bg.jpg") no-repeat center center fixed;
  background-size: cover;
}

main {
  flex: 1;
}

#home h1 {
  text-align: center;
}

h2,
h3 {
  text-align: left;
  margin-bottom: 25px;
}

p {
  text-align: left;
}

/* Custom styling for navigation bar */
.navbar-custom {
  background-color: #050e1b;
}

.navbar-custom .navbar-brand,
.navbar-custom .nav-link {
  color: white;
  font-weight: 600;
}

.navbar-custom .nav-link:hover {
  color: #d14242;
}

/* Custom styling for all the sections in the home page */
.bg-section {
  position: relative;
  padding: 80px 0px;
  min-height: 50vh;
  background-color: rgba(0, 0, 0, 0.6);
}

.bg-section .container {
  position: relative;
  z-index: 1;
}

/* Custom styling for hero section */
#home {
  min-height: 40vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.profile-text {
  position: relative;
  z-index: 1;
  padding: 20px;
  max-width: 600px;
}

.profile-photo {
  width: 200px;
  height: 200px;
  object-fit: cover;
  object-position: 50% 20%;
  border-radius: 50%;
  margin-bottom: 15px;
}

/* Custom styling for experience sections */
#experience.bg-section {
  padding-top: 20px;
  padding-bottom: 20px;
}

.experience-block {
  margin-bottom: 30px;
  padding-left: 10px;
}

.experience-block h4::before {
  content: "•";
  color: #d14242;
  margin-right: 15px;
  font-size: 1 rem;
  vertical-align: middle;
}

.experience-block p {
  margin-left: 30px;
  line-height: 1.7;
  color: #ffffff;
}

/* Custom styling for projects sections to enable hover effect*/
.project-tile:hover {
  transform: translateY(-5px);
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
}

/* Custom styling for footer */
footer {
  background-color: #050e1b;
  padding: 20px 0;
  text-align: center;
}

footer p {
  margin: 0;
  text-align: center;
}

